--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -3,9 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SemHub</title>
+    <title>SemHub - Semantic search for GitHub</title>
+
+    <!-- Primary Meta Tags -->
+    <meta
+      name="description"
+      content="Search across your public and private repos using natural language."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://semhub.dev/" />
+    <!-- need full URL for og:image to work, for reasons I don't fully understand -->
+    <meta property="og:image" content="https://semhub.dev/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+
     <link rel="icon" href="/favicon.png" type="image/png" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   </head>
   <body>
     <div id="app"></div>
